--- a/src/Styles/styleLogin.css
+++ b/src/Styles/styleLogin.css
@@ -17,7 +17,7 @@ body {
 .login {
   background-color: #092b5a;
   border-radius: 10px;
-  box-shadow: 5px 5px 20px 0px rgba(0,0,0,1);
+  box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.8);
   padding: 20px;
   width: 500px;
 }
