--- a/src/Styles/styleLogin.css
+++ b/src/Styles/styleLogin.css
@@ -18,7 +18,7 @@ body {
   background-color: #092b5a;
   border-radius: 10px;
   box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.8);
-  padding: 20px;
+  padding: 20px 40px;
   width: 500px;
 }
 
@@ -89,10 +89,10 @@ body {
 }
 
 .btn-play {
-  background-color:#3a89c9;
+  background-color: #3a89c9;
 }
 
 .btn-play:disabled {
-  opacity: 0.4;
   cursor: not-allowed;
+  opacity: 0.4;
 }
