--- a/src/Styles/styleGame.css
+++ b/src/Styles/styleGame.css
@@ -55,7 +55,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: space-around;
-  padding: 10px 0;
+  padding: 10px 15px;
   width: 70%;
 }
 
@@ -64,7 +64,7 @@
   border-radius: 10px;
   box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.8);
   margin-top: 20px;
-  padding: 15px 0;
+  padding: 15px;
   width: 70%;
 }
 
