--- a/src/Styles/styleFeedback.css
+++ b/src/Styles/styleFeedback.css
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: 20px;
   width: 400px;
 }
 
@@ -38,4 +39,8 @@
 
 .feedback-container .btn-ranking {
   background-color: #f26c4f;
+}
+
+.feedback-container img {
+  width: 200px;
 }
